--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ grpcio = "^1.63.0"
 grpcio-tools = "^1.63.0"
 imagekitio = "^4.0.1"
 python-dotenv = "^1.0.1"
+pyjwt = "^2.8.0"
 
 
 [build-system]
